# GPU_Rendering

./: CMakeLists.txt  README.md  main.cpp
Shaders/: albedoAndAO.frag.glsl  albedoAndAO.vert.glsl  albedoTexAndVertexColor.frag.glsl  albedoTexture.vert.glsl  basic.frag.glsl  basic.vert.glsl  justRed.frag.glsl  uniformColor.frag.glsl  vertexColor.frag.glsl  vertexColor.vert.glsl
include/: FileLoader.h  GameObject.h  Material.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Transforms.h  Vectors.h
src/: FileLoader.cpp  GameObject.cpp  Material.cpp  Material.h  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Transforms.cpp  main.cpp  stb_image.cpp
